fix: add patient data on doctor role
